--- a/scss/components/buttons.scss
+++ b/scss/components/buttons.scss
@@ -1,7 +1,17 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* ÉLÉMENT : BOUTON*/
+/* ========================================================================*/
+/* ========================================================================*/
+
+
+
 .bouton {
     border-radius: 100px;
     padding: 12px 12px !important;
-    // padding: 14px 25px !important;
     margin: 0 auto;
     transition: color 0.2s, background-color 0.2s, border 0.2s;
     text-align: center;
