--- a/scss/site-global/animations.scss
+++ b/scss/site-global/animations.scss
@@ -1,4 +1,11 @@
-// PAGES
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* ANIMATIONS DE TRANSITION VIA VUE.JS*/
+/* ========================================================================*/
+/* ========================================================================*/
 
 .fade-enter-active,
 .fade-leave-active {
@@ -18,15 +25,38 @@
 
 
 
-
+/* ACTIVÉES UNIQUEMENT SUR GRAND ÉCRAN*/
 @media screen and (min-width: $breakpoint_bureau) {
 
 
 
     .entreePhoto-enter-active,
     .entreePhoto-leave-active {
-        animation: entreePhoto 3.5s;
-        animation-timing-function: ease-out;
+        -webkit-animation: entreePhoto 3.5s;
+                animation: entreePhoto 3.5s;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+
+    @-webkit-keyframes entreePhoto {
+        0% {
+            width: 100vw;
+            opacity: 0;
+        }
+
+        20% {
+            opacity: 1;
+        }
+
+        91% {
+            opacity: 1;
+            width: 100vw;
+        }
+
+        100% {
+            width: 50vw;
+
+        }
     }
 
     @keyframes entreePhoto {
@@ -54,17 +84,67 @@
 
     .entreeTitre-enter-active,
     .entreeTitre-leave-active {
-        animation: entreeTitre 4s;
-        animation-timing-function: ease-out;
-        // animation-delay: 1s;
-        animation-fill-mode: forwards;
+        -webkit-animation: entreeTitre 4s;
+                animation: entreeTitre 4s;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        /* animation-delay: 1s;*/
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
+    }
+
+    @-webkit-keyframes entreeTitre {
+        0% {
+            /* width: 1vw;*/
+            opacity: 0;
+            /* margin-left: 30vw;*/
+            font-size: 90px;
+            width: 100%;
+            text-align: center;
+        }
+
+        20% {
+            opacity: 0;
+        }
+
+        40% {
+            opacity: 1;
+        }
+
+        70% {
+            opacity: 1;
+        }
+
+        80% {
+            font-size: 90px;
+            opacity: 0;
+            text-align: center;
+            width: 100%;
+        }
+
+        81% {
+            font-size: 50px;
+            opacity: 0;
+            text-align: left;
+            width: 20%;
+        }
+
+        95% {
+            opacity: 0;
+        }
+
+        to {
+            width: 50%;
+            font-size: 50px;
+            opacity: 1;
+        }
     }
 
     @keyframes entreeTitre {
         0% {
-            // width: 1vw;
+            /* width: 1vw;*/
             opacity: 0;
-            // margin-left: 30vw;
+            /* margin-left: 30vw;*/
             font-size: 90px;
             width: 100%;
             text-align: center;
@@ -110,18 +190,21 @@
 
     .entreeSousTitre-enter-active,
     .entreeSousTitre-leave-active {
-        animation: entreeSousTitre 3.5s;
-        animation-timing-function: ease-out;
-        // animation-delay: 1s;
-        animation-fill-mode: forwards;
+        -webkit-animation: entreeSousTitre 3.5s;
+                animation: entreeSousTitre 3.5s;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        /* animation-delay: 1s;*/
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
         opacity: 0.01;
     }
 
-    @keyframes entreeSousTitre {
+    @-webkit-keyframes entreeSousTitre {
         0% {
-            // width: 1vw;
+            /* width: 1vw;*/
             opacity: 0;
-            // margin-left: 30vw;
+            /* margin-left: 30vw;*/
         }
 
         20% {
@@ -137,30 +220,62 @@
         }
 
         91% {
-            // margin-left: 30vw;
+            /* margin-left: 30vw;*/
         }
 
         100% {
             opacity: 1;
-            // margin-left: 0;
+            /* margin-left: 0;*/
+        }
+    }
+
+    @keyframes entreeSousTitre {
+        0% {
+            /* width: 1vw;*/
+            opacity: 0;
+            /* margin-left: 30vw;*/
+        }
+
+        20% {
+            opacity: 0;
+        }
+
+        50% {
+            opacity: 0;
+        }
+
+        55% {
+            opacity: 1;
+        }
+
+        91% {
+            /* margin-left: 30vw;*/
+        }
+
+        100% {
+            opacity: 1;
+            /* margin-left: 0;*/
         }
     }
 
 
     .entreeResume-enter-active,
     .entreeResume-leave-active {
-        animation: entreeResume 3.5s;
-        animation-timing-function: ease-out;
-        // animation-delay: 1s;
-        animation-fill-mode: forwards;
+        -webkit-animation: entreeResume 3.5s;
+                animation: entreeResume 3.5s;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        /* animation-delay: 1s;*/
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
         opacity: 0.01;
     }
 
-    @keyframes entreeResume {
+    @-webkit-keyframes entreeResume {
         0% {
-            // width: 1vw;
+            /* width: 1vw;*/
             opacity: 0;
-            // margin-left: 30vw;
+            /* margin-left: 30vw;*/
         }
 
         20% {
@@ -176,13 +291,43 @@
         }
 
         91% {
-            // margin-left: 30vw;
+            /* margin-left: 30vw;*/
             opacity: 0;
         }
 
         100% {
             opacity: 1;
-            // margin-left: 0;
+            /* margin-left: 0;*/
+        }
+    }
+
+    @keyframes entreeResume {
+        0% {
+            /* width: 1vw;*/
+            opacity: 0;
+            /* margin-left: 30vw;*/
+        }
+
+        20% {
+            opacity: 0;
+        }
+
+        50% {
+            opacity: 0;
+        }
+
+        70% {
+            opacity: 0;
+        }
+
+        91% {
+            /* margin-left: 30vw;*/
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            /* margin-left: 0;*/
         }
     }
 
@@ -190,9 +335,35 @@
 
     .entreeInfos-enter-active,
     .entreeInfos-leave-active {
-        animation: entreeInfos 3.5s;
-        animation-timing-function: ease-out;
+        -webkit-animation: entreeInfos 3.5s;
+                animation: entreeInfos 3.5s;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
 
+    }
+
+    @-webkit-keyframes entreeInfos {
+        0% {
+            width: 0;
+            padding: 0;
+            opacity: 0;
+        }
+
+        /* 60% {*/
+        /*     opacity: 1;*/
+        /* }*/
+
+        91% {
+            width: 0;
+            padding: 0;
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            width: 50vw;
+
+        }
     }
 
     @keyframes entreeInfos {
@@ -202,9 +373,9 @@
             opacity: 0;
         }
 
-        // 60% {
-        //     opacity: 1;
-        // }
+        /* 60% {*/
+        /*     opacity: 1;*/
+        /* }*/
 
         91% {
             width: 0;
@@ -224,41 +395,58 @@
 
     .entreeSubInfo-enter-active,
     .entreeSubInfo-leave-active {
-        animation: entreeSubInfo 0.5s;
-        // animation-timing-function: ease-in;
-        transform: translateY(-30px);
+        -webkit-animation: entreeSubInfo 0.5s;
+                animation: entreeSubInfo 0.5s;
+        /* animation-timing-function: ease-in;*/
+        -webkit-transform: translateY(-30px);
+                transform: translateY(-30px);
         opacity: 0;
+    }
+
+    @-webkit-keyframes entreeSubInfo {
+        100% {
+            -webkit-transform: translateY(0px);
+                    transform: translateY(0px);
+            opacity: 1;
+        }
     }
 
     @keyframes entreeSubInfo {
         100% {
-            transform: translateY(0px);
+            -webkit-transform: translateY(0px);
+                    transform: translateY(0px);
             opacity: 1;
         }
     }
 
     #uneDestinationInfos>*:nth-child(1) {
-        animation-delay: 3.6s;
+        -webkit-animation-delay: 3.6s;
+                animation-delay: 3.6s;
     }
 
     #uneDestinationInfos>*:nth-child(2) {
-        animation-delay: 3.7s;
+        -webkit-animation-delay: 3.7s;
+                animation-delay: 3.7s;
     }
 
     #uneDestinationInfos>*:nth-child(3) {
-        animation-delay: 3.8s;
+        -webkit-animation-delay: 3.8s;
+                animation-delay: 3.8s;
     }
 
     #uneDestinationInfos>*:nth-child(4) {
-        animation-delay: 3.9s;
+        -webkit-animation-delay: 3.9s;
+                animation-delay: 3.9s;
     }
 
     #uneDestinationInfos>*:nth-child(5) {
-        animation-delay: 4s;
+        -webkit-animation-delay: 4s;
+                animation-delay: 4s;
     }
 
     #uneDestinationInfos>*:nth-child(6) {
-        animation-delay: 4.1s;
+        -webkit-animation-delay: 4.1s;
+                animation-delay: 4.1s;
     }
 
 }
