--- a/scss/site-global/variables.scss
+++ b/scss/site-global/variables.scss
@@ -1,6 +1,16 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* VARIABLES GLOBALES*/
+/* ========================================================================*/
+/* ========================================================================*/
+
 $color_bleu1 : #34BDFF;
 $color_bleu2 : #34A2FF;
 $color_turquoise : #32D096;
+$gray: #9A9999;
 $breakpoint_mini : 400px;
 $breakpoint_mobile : 800px;
 $breakpoint_bureau : 1080px;
