--- a/scss/components/destination.scss
+++ b/scss/components/destination.scss
@@ -1,12 +1,12 @@
-// // ANIMATIONS
-// .fade-enter-active, .fade-leave-active {
-//   transition: opacity .5s, transform 0.5s;
-// }
-// .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-//   opacity: 0;
-//   transform: translateY(-30px);
-// }
-// -----------------------------------
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* ÉLÉMENT : UNE DESTINATION*/
+/* ========================================================================*/
+/* ========================================================================*/
+
 #bodyDestinations #logo {
     width: 180px;
     padding: 100px 0 80px 0;
@@ -22,9 +22,9 @@
     flex-direction: column;
     justify-content: space-between;
     top: 0px;
+    transition: opacity 0.25s, box-shadow 0.25s, top 0.25s, -webkit-transform 0.7s;
     transition: transform 0.7s, opacity 0.25s, box-shadow 0.25s, top 0.25s;
-    // transform: translateY(-20px);
-
+    transition: transform 0.7s, opacity 0.25s, box-shadow 0.25s, top 0.25s, -webkit-transform 0.7s;
     transition-timing-function: cubic-bezier(.25, .8, .25, 1);
 }
 
@@ -33,13 +33,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* flex-wrap: wrap;*/
 }
 
 .destiImage {
     width: 100%;
     height: 25vh;
-    /* background-image: url("../images/destinations/corse.jpg");*/
     background-size: cover;
     background-position: center center;
     border-radius: 4px 4px 0 0;
@@ -50,8 +48,6 @@
     width: 100%;
     padding: 6% 10%;
     box-sizing: border-box;
-    /* text-align: center;*/
-    /* float: left;*/
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -94,15 +90,13 @@
     display: inline-block;
 }
 
-
 .destination .bouton {
     width: 100%;
-    /* height: 50px;*/
     padding: 6px 10px !important;
-    // margin: 3px 0 5px 0;
     font-size: 13px;
     box-sizing: border-box;
 }
+
 .destination .bouton:first-child {
     margin-bottom: 8px;
 }
@@ -120,23 +114,25 @@
     .destiInfo {
         flex-direction: row;
     }
-.destiInfoDroite {
-    padding: 20px 20px;
-    width: 35%;
-    align-items: flex-end;
-}
-.destiInfoGauche {
-    padding: 20px 20px;
-    width: 55%;
-}
-.destination .bouton {
-    width: 80px;
-    /* height: 50px;*/
-    padding: 4px 10px;
-    margin: 5px 0;
-    font-size: 13px;
-    box-sizing: content-box;
-}
+
+    .destiInfoDroite {
+        padding: 20px 20px;
+        width: 35%;
+        align-items: flex-end;
+    }
+
+    .destiInfoGauche {
+        padding: 20px 20px;
+        width: 55%;
+    }
+
+    .destination .bouton {
+        width: 80px;
+        padding: 4px 10px;
+        margin: 5px 0;
+        font-size: 13px;
+        box-sizing: content-box;
+    }
 
 }
 
@@ -144,17 +140,18 @@
     .destination {
         width: 40vw;
     }
-.destiInfoGauche div:nth-child(1) {
-    font-weight: 700;
-    color: #444;
-    font-size: 15px;
-}
 
-.destiInfoGauche div:nth-child(2) {
-    color: $color_turquoise;
-    font-size: 10px;
-    margin: 4px 0 10px 0;
-}
+    .destiInfoGauche div:nth-child(1) {
+        font-weight: 700;
+        color: #444;
+        font-size: 15px;
+    }
+
+    .destiInfoGauche div:nth-child(2) {
+        color: $color_turquoise;
+        font-size: 10px;
+        margin: 4px 0 10px 0;
+    }
 }
 
 @media screen and (min-width: $breakpoint_bureau) {
