--- a/scss/layout/pageConfirmation.scss
+++ b/scss/layout/pageConfirmation.scss
@@ -1,3 +1,13 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* PAGE : CONFIRMATION DE RÉSERVATION*/
+/* ========================================================================*/
+/* ========================================================================*/
+
+
 #confPrenom,
 #confNom {
     display: inline-block;
@@ -6,7 +16,7 @@
 #section_optionsConf p {
     display: flex;
     align-items: center;
-	padding-right: 3px;
+  padding-right: 3px;
 
     i {
         color: $color_turquoise;
@@ -17,54 +27,57 @@
 
 
 #titreConfirmation {
-	font-size: 20px;
-	font-weight: 800;
-	text-align: center;
-	margin: 0 auto;
+  font-size: 20px;
+  font-weight: 800;
+  text-align: center;
+  margin: 0 auto;
 
-	margin: 50px;
+  margin: 50px;
   color: #333;
 }
 
 #bodyConfirmationRetour {
-	width: 100%;
-	text-align: center;
+  width: 100%;
+  text-align: center;
     margin: 0 auto;
     margin-top: 25px;
     color: $color_bleu2;
     text-shadow: none;
     font-weight: 600;
     font-size: 14px;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s;
     opacity: 0;
-    transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+            transform: translateX(30px);
 }
 
 #section_facturation {
-	h2{
-		margin-bottom: 15px;
-	}
+  h2{
+    margin-bottom: 15px;
+  }
 }
 
 
 .confSpan {
-	margin-bottom: 15px;
-	font-weight: 600;
-	color: #444;
+  margin-bottom: 15px;
+  font-weight: 600;
+  color: #444;
 }
 
 @media screen and (min-width: $breakpoint_mobile) {
 #titreConfirmation {
-	font-size: 30px;
-	font-weight:800;
-	text-align: center;
-	margin: 0 auto;
-	margin-top: 70px;
+  font-size: 30px;
+  font-weight:800;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 70px;
 }
 }
 
 
-// ====================================
+/* ====================================*/
 
 
 .check_mark {
@@ -88,7 +101,6 @@ button {
   width: 80px;
   height: 80px;
   border: 4px solid gray;
-  -webkit-border-radius: 40px;
   border-radius: 40px;
   border-radius: 50%;
   margin: 20px auto;
@@ -103,7 +115,6 @@ button {
 
 .sa-icon.sa-success::before, .sa-icon.sa-success::after {
   content: '';
-  -webkit-border-radius: 40px;
   border-radius: 40px;
   border-radius: 50%;
   position: absolute;
@@ -115,7 +126,6 @@ button {
 }
 
 .sa-icon.sa-success::before {
-  -webkit-border-radius: 120px 0 0 120px;
   border-radius: 120px 0 0 120px;
   top: -7px;
   left: -33px;
@@ -126,7 +136,6 @@ button {
 }
 
 .sa-icon.sa-success::after {
-  -webkit-border-radius: 0 120px 120px 0;
   border-radius: 0 120px 120px 0;
   top: -11px;
   left: 30px;
@@ -140,7 +149,6 @@ button {
   width: 80px;
   height: 80px;
   border: 4px solid rgba(76, 175, 80, .5);
-  -webkit-border-radius: 40px;
   border-radius: 40px;
   border-radius: 50%;
   box-sizing: content-box;
@@ -165,7 +173,8 @@ button {
 .sa-icon.sa-success.animate::after {
   -webkit-animation: rotatePlaceholder 4.25s ease-in;
   animation: rotatePlaceholder 4.25s ease-in;
-  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
 .sa-icon.sa-success {
@@ -181,13 +190,15 @@ button {
 .animateSuccessTip {
   -webkit-animation: animateSuccessTip 0.75s;
   animation: animateSuccessTip 0.75s;
-  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
 .animateSuccessLong {
   -webkit-animation: animateSuccessLong 0.75s;
   animation: animateSuccessLong 0.75s;
-  animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
 @-webkit-keyframes animateSuccessLong {
