--- a/scss/layout/pageDestination.scss
+++ b/scss/layout/pageDestination.scss
@@ -1,3 +1,12 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* PAGE : PRÉSENTATION D'UNE DESTINATION*/
+/* ========================================================================*/
+/* ========================================================================*/
+
 #main_uneDestination {
     position: absolute;
     top: 0;
@@ -7,10 +16,9 @@
 
 #uneDestination {
     width: 100vw;
-    // height: 100vh;
     display: flex;
     flex-direction: column;
-        background-color: #fefefe;
+    background-color: #fefefe;
 
 }
 
@@ -27,10 +35,6 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
-
-
-
 
 #link {
     font-size: 14px;
@@ -61,8 +65,6 @@
     font-weight: 800;
     text-shadow: 0 0 120px #444;
     text-transform: uppercase;
-    // line-height: 60px;
-
     width: 50%;
     opacity: 1;
 }
@@ -78,7 +80,6 @@
     border-radius: 2px;
     font-size: 11px;
 }
-
 
 #resumeInfos>div:first-child>div:first-child {
     padding-bottom: 4px;
@@ -116,15 +117,15 @@
 }
 
 
-// ===============================================
-// ===============================================
-// ===============================================
+/* ===============================================*/
+/* ===============================================*/
+/* ===============================================*/
 
 
 
 #uneDestinationInfos {
     background-color: #fefefe;
-    // height: 100vh;
+    /* height: 100vh;*/
     width: 100vw;
     padding: 5vw 6vw;
     box-sizing: border-box;
@@ -241,7 +242,7 @@
 }
     #uneDestinationInfos {
         background-color: #fefefe;
-        // height: 100vh;
+        /* height: 100vh;*/
         width: 100vw;
         padding: 50px 70px;
         box-sizing: border-box;
@@ -336,7 +337,7 @@
         flex: 1;
         background-size: cover;
         background-position: center center;
-        // min-height: 100vh;
+        /* min-height: 100vh;*/
         width: 50vw;
         padding: 50px 70px;
         box-sizing: border-box;
@@ -349,7 +350,7 @@
 
 
     #uneDestinationInfos {
-        // flex: 1;
+        /* flex: 1;*/
         position: relative;
         left: 50%;
         background-color: #fefefe;
