--- a/scss/site-global/effects.scss
+++ b/scss/site-global/effects.scss
@@ -1,3 +1,12 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* EFFETS GLOBAUX*/
+/* ========================================================================*/
+/* ========================================================================*/
+
 .boxShadow {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     border-radius: 2px;
@@ -5,7 +14,6 @@
 
 .boxShadowHover {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    // transition: box-shadow 0.3s cubic-bezier(.25, .8, .25, 1);
     border-radius: 2px;
 }
 
