--- a/scss/site-global/icons.scss
+++ b/scss/site-global/icons.scss
@@ -1,3 +1,12 @@
+/* ========================================================================*/
+/* ========================================================================*/
+/* CSS DE L'APPLICATION WEB - LE 13E MOIS*/
+/* @author = Lucas Theillet*/
+/* ========================================================================*/
+/* LISTE DES ICONS DE LA PAGE D'ACCUEIL*/
+/* ========================================================================*/
+/* ========================================================================*/
+
 #icon_pays {
 	background-image: url("../images/icons/accueil/icon_pays.png");
 	background-size: contain;
