--- a/scss/layout/pageListeDestinations.scss
+++ b/scss/layout/pageListeDestinations.scss
@@ -17,7 +17,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("../images/backgrounds/destinations_background.jpg");
+        // background-color: #f7fcff;
+        // background-image: url("../images/backgrounds/destinations_background.jpg");
         background-attachment: fixed;
         -webkit-filter: brightness(110%);
                 filter: brightness(110%);
