--- a/scss/layout/pageListeDestinations.scss
+++ b/scss/layout/pageListeDestinations.scss
@@ -25,6 +25,7 @@
         background-position: center center;
         z-index: -10;
         min-height: 100vh;
+        will-change: transform;
     }
 }
 
