--- a/css/main.css
+++ b/css/main.css
@@ -898,6 +898,8 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
+    will-change: transform;
+    background-image: url("../images/backgrounds/destinations_background.jpg");
     background-attachment: fixed;
     -webkit-filter: brightness(110%);
     filter: brightness(110%);
