--- a/scss/site-global/animations.scss
+++ b/scss/site-global/animations.scss
@@ -88,19 +88,19 @@
                 animation: entreeTitre 4s;
         -webkit-animation-timing-function: ease-out;
                 animation-timing-function: ease-out;
-        /* animation-delay: 1s;*/
         -webkit-animation-fill-mode: forwards;
                 animation-fill-mode: forwards;
     }
 
+  
+
+  
+
     @-webkit-keyframes entreeTitre {
         0% {
-            /* width: 1vw;*/
             opacity: 0;
-            /* margin-left: 30vw;*/
             font-size: 90px;
-            width: 100%;
-            text-align: center;
+            margin: 0 auto;
         }
 
         20% {
@@ -118,15 +118,12 @@
         80% {
             font-size: 90px;
             opacity: 0;
-            text-align: center;
-            width: 100%;
+            margin: 0 auto;
         }
 
         81% {
             font-size: 50px;
             opacity: 0;
-            text-align: left;
-            width: 20%;
         }
 
         95% {
@@ -134,20 +131,19 @@
         }
 
         to {
-            width: 50%;
-            font-size: 50px;
             opacity: 1;
         }
     }
 
+  
+
+  
+
     @keyframes entreeTitre {
         0% {
-            /* width: 1vw;*/
             opacity: 0;
-            /* margin-left: 30vw;*/
             font-size: 90px;
-            width: 100%;
-            text-align: center;
+            margin: 0 auto;
         }
 
         20% {
@@ -165,15 +161,12 @@
         80% {
             font-size: 90px;
             opacity: 0;
-            text-align: center;
-            width: 100%;
+            margin: 0 auto;
         }
 
         81% {
             font-size: 50px;
             opacity: 0;
-            text-align: left;
-            width: 20%;
         }
 
         95% {
@@ -181,8 +174,6 @@
         }
 
         to {
-            width: 50%;
-            font-size: 50px;
             opacity: 1;
         }
     }
@@ -194,20 +185,14 @@
                 animation: entreeSousTitre 3.5s;
         -webkit-animation-timing-function: ease-out;
                 animation-timing-function: ease-out;
-        /* animation-delay: 1s;*/
         -webkit-animation-fill-mode: forwards;
                 animation-fill-mode: forwards;
         opacity: 0.01;
     }
 
+
     @-webkit-keyframes entreeSousTitre {
         0% {
-            /* width: 1vw;*/
-            opacity: 0;
-            /* margin-left: 30vw;*/
-        }
-
-        20% {
             opacity: 0;
         }
 
@@ -219,24 +204,14 @@
             opacity: 1;
         }
 
-        91% {
-            /* margin-left: 30vw;*/
-        }
-
         100% {
             opacity: 1;
-            /* margin-left: 0;*/
         }
     }
 
+
     @keyframes entreeSousTitre {
         0% {
-            /* width: 1vw;*/
-            opacity: 0;
-            /* margin-left: 30vw;*/
-        }
-
-        20% {
             opacity: 0;
         }
 
@@ -248,13 +223,8 @@
             opacity: 1;
         }
 
-        91% {
-            /* margin-left: 30vw;*/
-        }
-
         100% {
             opacity: 1;
-            /* margin-left: 0;*/
         }
     }
 
@@ -265,33 +235,19 @@
                 animation: entreeResume 3.5s;
         -webkit-animation-timing-function: ease-out;
                 animation-timing-function: ease-out;
-        /* animation-delay: 1s;*/
         -webkit-animation-fill-mode: forwards;
                 animation-fill-mode: forwards;
         opacity: 0.01;
+        -webkit-animation-delay: 0.5s;
+                animation-delay: 0.5s;
     }
 
     @-webkit-keyframes entreeResume {
         0% {
-            /* width: 1vw;*/
-            opacity: 0;
-            /* margin-left: 30vw;*/
-        }
-
-        20% {
-            opacity: 0;
-        }
-
-        50% {
-            opacity: 0;
-        }
-
-        70% {
             opacity: 0;
         }
 
         91% {
-            /* margin-left: 30vw;*/
             opacity: 0;
         }
 
@@ -303,31 +259,15 @@
 
     @keyframes entreeResume {
         0% {
-            /* width: 1vw;*/
-            opacity: 0;
-            /* margin-left: 30vw;*/
-        }
-
-        20% {
-            opacity: 0;
-        }
-
-        50% {
-            opacity: 0;
-        }
-
-        70% {
             opacity: 0;
         }
 
         91% {
-            /* margin-left: 30vw;*/
             opacity: 0;
         }
 
         100% {
             opacity: 1;
-            /* margin-left: 0;*/
         }
     }
 
@@ -349,10 +289,6 @@
             opacity: 0;
         }
 
-        /* 60% {*/
-        /*     opacity: 1;*/
-        /* }*/
-
         91% {
             width: 0;
             padding: 0;
@@ -372,10 +308,6 @@
             padding: 0;
             opacity: 0;
         }
-
-        /* 60% {*/
-        /*     opacity: 1;*/
-        /* }*/
 
         91% {
             width: 0;
@@ -397,7 +329,6 @@
     .entreeSubInfo-leave-active {
         -webkit-animation: entreeSubInfo 0.5s;
                 animation: entreeSubInfo 0.5s;
-        /* animation-timing-function: ease-in;*/
         -webkit-transform: translateY(-30px);
                 transform: translateY(-30px);
         opacity: 0;
